rename customer service

--- a/pertanyaan-saran.html
+++ b/pertanyaan-saran.html
@@ -318,7 +318,10 @@
               <div class="col-lg-6">
                 <div class="mb-4">
                   <label for="kelamin" class="text-black form-label" style="font-weight: 500;">Gender*</label>
-                  <select required id="kelamin" type="text" class="form-select border p-3" style="border-radius: 10px;"></select>
+                  <select required id="kelamin" name="kelamin" class="form-select border p-3" style="border-radius: 10px;">
+                    <option value="lakilaki">Laki-laki</option>
+                    <option value="perempuan">Perempuan</option>
+                  </select>
                 </div>
               </div>
               <div class="col-lg-6">
