--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="topbar-left">
         <div class="topbar-menu">
           <a href="index.html" class="topbar-menu-link active">Fun Creator</a>
-          <a href="corporate.html" class="topbar-menu-link">Professional & Corporate</a>
+          <a href="corporate.html" class="topbar-menu-link">Profesional & Korporat</a>
         </div>
       </div>
       <div class="topbar-right">
@@ -663,7 +663,7 @@
         <img src="assets/images/campina/logo-campina.png" height="88" alt="logo campina" class="mb-5">
         <div class="row justify-content-between mb-5">
           <div class="col-lg-3 mb-5 mb-lg-0">
-            <h6 style="font-weight: 700;" class="text-white mb-5">Professional & Corporate</h6>
+            <h6 style="font-weight: 700;" class="text-white mb-5">Profesional & Korporat</h6>
             <div class="d-flex flex-column" style="gap: 18px;">
               <a href="about-us.html" style="font-weight: 400;" class="text-white">About</a>
               <a href="sustain-report.html" style="font-weight: 400;" class="text-white">Sustainability Report</a>
@@ -689,11 +689,11 @@
             </div>
           </div>
           <div class="col-lg-3 mb-5 mb-lg-0">
-            <h6 style="font-weight: 700;" class="text-white mb-5">Head Office</h6>
+            <h6 style="font-weight: 700;" class="text-white mb-5">Kantor Pusat</h6>
             <div class="d-flex flex-column" style="gap: 18px;">
               <p style="font-weight: 400;" class="text-white">Jl. Raya Rungkut Industri II No.15, Tenggilis Mejoyo, Kec. Tenggilis Mejoyo, Kota SBY, Jawa Timur 60292</p>
             </div>
-            <h6 style="font-weight: 700;" class="text-white my-5">Marketing, Sales & Distribution</h6>
+            <h6 style="font-weight: 700;" class="text-white my-5">Marketing, Sales dan Distribusi</h6>
             <div class="d-flex flex-column" style="gap: 18px;">
               <p style="font-weight: 400;" class="text-white">Jl. Rawa Terate 1 No. 5 Pulo Gadung, Jakarta Timur, DKI Jakarta, Indonesia</p>
             </div>
@@ -702,7 +702,7 @@
         <div class="row mt-5">
           <div class="col-lg-6 mb-5 mb-lg-0">
             <div class="d-flex align-items-lg-center flex-column flex-lg-row">
-              <h6 style="font-weight: 700;" class="text-white me-5">Connect with us</h6>
+              <h6 style="font-weight: 700;" class="text-white me-5">Media Sosial</h6>
               <div id="social-icons" class="d-flex gap-3">
                 <a href="#">
                   <img src="assets/images/campina/icon-instagram-active.png" width="54" alt="icon instagram" class="hover">
@@ -729,7 +729,7 @@
           </div>
           <div class="col-lg-6">
             <div class="d-flex flex-column align-items-start">
-              <h6 style="font-weight: 700;" class="text-white mb-5">Download aplikasi Campina</h6>
+              <h6 style="font-weight: 700;" class="text-white mb-5">Download Aplikasi Campina</h6>
               <div style="margin-bottom: 18px">
                 <a href="#" style="margin-right: 13px;"><img src="assets/images/campina/play-store.png" alt="get it on play store"></a>
                 <a href="#"><img src="assets/images/campina/app-store.png" alt="download on app store"></a>
